--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "next build",
     "start": "next start",
     "prepare": "husky install",
+    "format": "prettier --check .",
+    "format:fix": "prettier --write .",
     "lint": "next lint"
   },
   "dependencies": {
@@ -23,6 +25,7 @@
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
     "husky": "^8.0.1",
+    "prettier": "^2.6.2",
     "typescript": "4.7.3"
   }
 }
