--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "format": "prettier --check .",
     "format:fix": "prettier --write .",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "lint:types": "tsc --noEmit",
+    "code-check": "yarn format:fix && yarn lint && yarn lint:types"
   },
   "dependencies": {
     "next": "12.1.6",
@@ -29,6 +31,7 @@
     "eslint-config-next": "^12.1.6",
     "eslint-config-react-moonstone": "^1.1.0",
     "husky": "^8.0.1",
+    "lint-staged": "^13.0.2",
     "prettier": "^2.6.2",
     "typescript": "4.7.3"
   }
