--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "export": "next build && next export",
     "prepare": "husky install",
     "format": "prettier --check .",
     "format:fix": "prettier --write .",
