--- a/.kodiak.toml
+++ b/.kodiak.toml
@@ -4,8 +4,13 @@ version = 1
 versions = ["minor", "patch"]
 usernames = ["dependabot"]
 
+[merge]
+method = "rebase_fast_forward"
+
 [merge.message]
 title = "pull_request_title"
+include_coauthors = true
+include_pull_request_author = true
 
 [approve]
 auto_approve_usernames = ["dependabot"]
