--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "code-check": "yarn format:fix && yarn lint && yarn lint:types"
   },
   "dependencies": {
+    "clsx": "^1.1.1",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -28,12 +29,16 @@
     "@types/react-dom": "18.0.5",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
+    "autoprefixer": "^10.4.7",
     "eslint": "^8.18.0",
     "eslint-config-next": "^12.1.6",
     "eslint-config-react-moonstone": "^1.1.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.2",
+    "postcss": "^8.4.14",
     "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.11",
+    "tailwindcss": "^3.1.4",
     "typescript": "4.7.4"
   }
 }
