--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "clsx": "^1.1.1",
     "next": "12.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
