--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "react-power-ups": "^1.6.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
