--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint": "^8.19.0",
     "eslint-config-next": "^12.2.2",
     "eslint-config-react-moonstone": "^1.3.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "postcss": "^8.4.14",
